--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 # ==== CONFIGURE =====
 # Use a Node 16 base image
-FROM node:18-alpine 
+FROM node:8
 # Set the working directory to /app inside the container
 WORKDIR /app
 # Copy app files
