--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,12 @@
 # Use a Node 16 base image
 FROM node:12
 # Set the working directory to /app inside the container
-WORKDIR /app
+WORKDIR /.
 # Copy app files
 COPY . .
 # ==== BUILD =====
 # Install dependencies (npm ci makes sure the exact versions in the lockfile gets installed)
-RUN npm install 
+RUN npm ci
 # Build the app
 RUN npm run build
 # ==== RUN =======
