--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 # Use a Node 16 base image
 FROM node:12
 # Set the working directory to /app inside the container
-WORKDIR /frontend
+WORKDIR /app
 # Copy app files
 COPY . .
 # ==== BUILD =====
