--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,8 @@
 # ==== CONFIGURE =====
 # Use a Node 16 base image
-FROM node:12
+FROM node:16:alpine
 # Set the working directory to /app inside the container
-WORKDIR /app
+WORKDIR /.
 # Copy app files
 COPY . .
 COPY package*.json ./
