--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 # ==== CONFIGURE =====
 # Use a Node 16 base image
-FROM node:16:alpine
+FROM node:16-alpine
 # Set the working directory to /app inside the container
 WORKDIR /.
 # Copy app files
