--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,15 +3,21 @@ name: ci
 on:
   push:
     branches:
-      - "master"
+      - 'main'
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -19,13 +25,9 @@ jobs:
           username: revolt47
           password: 123456789
       -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
-          file: ./frontend/Dockerfile
+          context: ./frontend/Dockerfile
           push: true
           tags: revolt47/integration:latest
